name:                cryptopals-haskell
version:             0.1.0.0
-- synopsis: Solutions to the Cryptopals Crypto Challenges in Haskell
-- description:
homepage:            https://github.com/githubuser/cryptopals-haskell#readme
license:             MIT
license-file:        LICENSE
author:              David Melendez
maintainer:          davidmelendez@knights.ucf.edu
copyright:           2019 David Melendez
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type: git
  location: https://www.github.com/melendezd/cryptopals-haskell

library 
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, 
                       bytestring,
                       base16-bytestring,
                       base64-bytestring,
                       ghc
  other-modules:       Paths_cryptopals_haskell
  exposed-modules:     Set1                       

test-suite cryptopals-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  other-modules:       
    Paths_cryptopals_haskell,
    Set1Spec
  build-depends:       base >= 4.7 && < 5, 
                       hspec,
                       hspec-discover,
                       bytestring,
                       cryptopals-haskell
  build-tool-depends:  hspec-discover:hspec-discover == 2.*

